--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+     <div id="acessibilidade">
+        <button id="botao-acessibilidade" aria-expanded="false" aria-controls="opcoes-acessibilidade">
+            ♿
+        </button>
+        <ul id="opcoes-acessibilidade" class="lista-acessibilidade">
+            <li><button id="aumentar-fonte">A+</button></li>
+            <li><button id="diminuir-fonte">A-</button></li>
+            <li><button id="alterna-contraste">Contraste</button></li>
+        </ul>
+    </div>
     <header class="p-5">
         <nav class="container d-flex justify-content-between align-items-center">
             <img src="img/logogta.png" class="nav-img" loading="lazy">
@@ -96,6 +106,9 @@
         <i class="bi bi-facebook"></i>
         <p class="mt-3">Projeto fictício inspirado em GTA. Sem fins comerciais.</p>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
+<script src="script.js"></script>
+
 </body>
 
 </html>
